# project_eppendorf_mirror

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.py  do.sh  partitions.csv  run_in_docker.sh  sdkconfig.defaults  start_container.sh
app/: CMakeLists.txt  app_main.cpp  edf_stubs.cpp  log_config.hpp
app/messaging/: decoder.hpp  dispatch.hpp  messenger.hpp
app/modules/: CMakeLists.txt  modules.hpp
app/modules/sys/: sys.hpp
app/modules/wifi/: CMakeLists.txt  wifi.cpp  wifi.hpp  wifi_dbg.hpp
bsp/: time.hpp  uart.hpp
cmake/: conan.cmake  esp32.cmake
project/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  sdkconfig
project/app/: CMakeLists.txt  app_main.cpp
project/cmake/: esp32.cmake
util/: meta.hpp  net.hpp  string.hpp
